package co.edu.uniquindio.backend.model;

public enum Role {
    ADMIN,
    CLIENTE
}